feat(server): add private nursery lessons
